Fixed layout problem when image is too big

--- a/styles/scss/header.scss
+++ b/styles/scss/header.scss
@@ -222,6 +222,13 @@
                   .cart-summary--image {
                     flex-basis: 30%;
                     line-height: 0;
+                    max-height: 9.375rem;
+
+                    img {
+                      display: block;
+                      max-height: 100%;
+                      margin: 0 auto;
+                    }
                   }
 
                   .cart-summary--info {
